Feat: Optimize SEO title and meta tags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/logohead.png" />
   <link rel="apple-touch-icon" href="/logohead.png" />
-  <title>LENNIN SORTEOS</title>
+
+  <!-- SEO Principal -->
+  <title>Lennin Sorteos</title>
+  <meta name="description"
+    content="Participa en los mejores sorteos online de manera rápida y segura en Lennin Sorteos. ¡Compra tus tickets con Yape y gana premios exclusivos hoy mismo!">
+
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://lenninsorteos.com/" />
+  <meta property="og:title" content="Lennin Sorteos | Gana Premios Increíbles Online" />
+  <meta property="og:description"
+    content="Participa en los mejores sorteos online de manera rápida y segura. ¡Compra tus tickets con Yape y gana premios exclusivos!" />
+  <meta property="og:image" content="/lenninsorteoslogo.jpg" />
 </head>
 
 <body>
