Fix: Update title to full SEO version

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="/logohead.png" />
 
   <!-- SEO Principal -->
-  <title>Lennin Sorteos</title>
+  <title>Lennin Sorteos | Gana Premios Increíbles Online</title>
   <meta name="description"
     content="Participa en los mejores sorteos online de manera rápida y segura en Lennin Sorteos. ¡Compra tus tickets con Yape y gana premios exclusivos hoy mismo!">
 
