--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,8 @@
   <title>Lennin Sorteos | Gana Premios Increíbles Online</title>
   <meta name="description"
     content="Participa en los mejores sorteos online de manera rápida y segura en Lennin Sorteos. ¡Compra tus tickets con Yape y gana premios exclusivos hoy mismo!">
+  <meta name="keywords"
+    content="lennin sorteos, lenninsorteos, sorteos peru, ganar premios, sorteos online, rifas peru, comprar tickets yape">
 
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
