Fix: Revert title to simple version per user request

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="/logohead.png" />
 
   <!-- SEO Principal -->
-  <title>Lennin Sorteos | Gana Premios Increíbles Online</title>
+  <title>Lennin Sorteos</title>
   <meta name="description"
     content="Participa en los mejores sorteos online de manera rápida y segura en Lennin Sorteos. ¡Compra tus tickets con Yape y gana premios exclusivos hoy mismo!">
   <meta name="keywords"
@@ -17,7 +17,7 @@
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lenninsorteos.com/" />
-  <meta property="og:title" content="Lennin Sorteos | Gana Premios Increíbles Online" />
+  <meta property="og:title" content="Lennin Sorteos" />
   <meta property="og:description"
     content="Participa en los mejores sorteos online de manera rápida y segura. ¡Compra tus tickets con Yape y gana premios exclusivos!" />
   <meta property="og:image" content="/lenninsorteoslogo.jpg" />
