Fix: Correct og:url to Vercel domain

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://lenninsorteos.com/" />
+  <meta property="og:url" content="https://lennin-sorteos-web.vercel.app/" />
   <meta property="og:title" content="Lennin Sorteos" />
   <meta property="og:description"
     content="Participa en los mejores sorteos online de manera rápida y segura. ¡Compra tus tickets con Yape y gana premios exclusivos!" />
