Fix: Use absolute URL for og:image to ensure cloud compatibility

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
   <meta property="og:title" content="Lennin Sorteos" />
   <meta property="og:description"
     content="Participa en los mejores sorteos online de manera rápida y segura. ¡Compra tus tickets con Yape y gana premios exclusivos!" />
-  <meta property="og:image" content="/lenninsorteoslogo.jpg" />
+  <meta property="og:image" content="https://lennin-sorteos-web.vercel.app/lenninsorteoslogo.jpg" />
 </head>
 
 <body>
