Fix SEO: Update title casing and add structured data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" href="/logohead.png" />
 
   <!-- SEO Principal -->
-  <title>Lennin Sorteos</title>
+  <title>LENNIN SORTEOS</title>
   <meta name="description"
     content="Participa en los mejores sorteos online de manera rápida y segura en Lennin Sorteos. ¡Compra tus tickets con Yape y gana premios exclusivos hoy mismo!">
   <meta name="keywords"
@@ -17,10 +17,23 @@
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lennin-sorteos-web.vercel.app/" />
-  <meta property="og:title" content="Lennin Sorteos" />
+  <meta property="og:title" content="LENNIN SORTEOS" />
+  <meta property="og:site_name" content="LENNIN SORTEOS" />
   <meta property="og:description"
     content="Participa en los mejores sorteos online de manera rápida y segura. ¡Compra tus tickets con Yape y gana premios exclusivos!" />
   <meta property="og:image" content="https://lennin-sorteos-web.vercel.app/lenninsorteoslogo.jpg" />
+
+  <!-- Datos Estructurados (JSON-LD) para Google -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "LENNIN SORTEOS",
+      "alternateName": ["Lennin Sorteos Web", "Lennin Sorteos Perú"],
+      "url": "https://lennin-sorteos-web.vercel.app/",
+      "image": "https://lennin-sorteos-web.vercel.app/lenninsorteoslogo.jpg"
+    }
+  </script>
 </head>
 
 <body>
