--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/logohead.png" />
   <link rel="apple-touch-icon" href="/logohead.png" />
+  <link rel="canonical" href="https://www.lenninsorteos.com/" />
 
   <!-- SEO Principal -->
   <title>LENNIN SORTEOS</title>
@@ -16,12 +17,12 @@
 
   <!-- Open Graph / Facebook / WhatsApp -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://lennin-sorteos-web.vercel.app/" />
+  <meta property="og:url" content="https://www.lenninsorteos.com/" />
   <meta property="og:title" content="LENNIN SORTEOS" />
   <meta property="og:site_name" content="LENNIN SORTEOS" />
   <meta property="og:description"
     content="Participa en los mejores sorteos online de manera rápida y segura. ¡Compra tus tickets con Yape y gana premios exclusivos!" />
-  <meta property="og:image" content="https://lennin-sorteos-web.vercel.app/lenninsorteoslogo.jpg" />
+  <meta property="og:image" content="https://www.lenninsorteos.com/lenninsorteoslogo.jpg" />
 
   <!-- Datos Estructurados (JSON-LD) para Google -->
   <script type="application/ld+json">
@@ -30,8 +31,8 @@
       "@type": "WebSite",
       "name": "LENNIN SORTEOS",
       "alternateName": ["Lennin Sorteos Web", "Lennin Sorteos Perú"],
-      "url": "https://lennin-sorteos-web.vercel.app/",
-      "image": "https://lennin-sorteos-web.vercel.app/lenninsorteoslogo.jpg"
+      "url": "https://www.lenninsorteos.com/",
+      "image": "https://www.lenninsorteos.com/lenninsorteoslogo.jpg"
     }
   </script>
 </head>
